03-ingress/kustomize/ingress-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
spec:
  loadBalancerIP: "$EXTERNAL_IP"
  externalTrafficPolicy: "Local"
